2004-02-03  TAGA Yoshitaka  <tagga@tsuda.ac.jp>

	* src/escm.h: Removed code on formatted output.

	* Removed code on i18n.
	
2003-07-28  TAGA Yoshitaka  <tagga@tsuda.ac.jp>

	* doc/2aescm.epod: Added the manpage of 2aescm.

	* doc/*.escm, doc/aescm.epod: Updated.

2003-07-26  TAGA Yoshitaka  <tagga@tsuda.ac.jp>

	* src/classic.c, src/Makefile.am: Added a tool (2aescm) to convert
	the original escm format into the XML format.

	* src/Makefile.am (DEFS): Use DEFS instead of AM_CFLAGS.

	* src/misc.h, src/misc.c: Removed fallback functions.

2003-07-25  TAGA Yoshitaka  <tagga@tsuda.ac.jp>

	* src/misc.c, src/filter.c: Internationalized.

2003-07-25  gettextize  <bug-gnu-gettext@gnu.org>

	* Makefile.am (SUBDIRS): Add m4.
	(ACLOCAL_AMFLAGS): New variable.
	(EXTRA_DIST): New variable.
	* configure.ac (AC_CONFIG_FILES): Add po/Makefile.in, m4/Makefile.

2003-07-25  TAGA Yoshitaka  <tagga@tsuda.ac.jp>

	* src/filter.c (main): Added --header option as counterpart
	of --footer option.

	* src/misc.h, src/misc.c, src/filter.c: Changed interface of
	meta-argument expansion.

	* src/filter.c (main): Added --classic option for backward
	compatibility.

	* src/escm.c, src/misc.h, src/filter.c (main): Removed useless
	escm_literal().

	* src/filter.c (main): Invoke getopt() in main().

	* src/misc.c: Include <string.h>.

	* configure.ac, doc/Makefile.am: Check pod2man and pod2html.

	* src/escm.h, src/filter.c, src/lang.awk, src/lang.c: Added
	backend field to struct escm_lang.

	* src/filter.c src/misc.h, src/misc.c (tokenize_cmd): Moved this
	function from filter.c to misc.c.

2003-07-24  TAGA Yoshitaka  <tagga@tsuda.ac.jp>

	* src/lang.c (strchr): Preprocessed as index() if not found.

	* src/filter.c (parse_opts): Accept long options.

	* src/misc.c (strtol): Added a fallback for strtol().

	* src/lang.c (my_strchr): Added a fallback for strchr().

	* src/misc.c (atexit): Added an ad hoc fallback for atexit().

2003-07-23  TAGA Yoshitaka  <tagga@tsuda.ac.jp>
