@@ -1,5 +1,5 @@
 
-     Copyright (c) 2002-2003 TAGA Yoshitaka, All rights reserved.
+     Copyright (c) 2002-2004 TAGA Yoshitaka, All rights reserved.
      Copyright (c) 2000-2002 Shiro Kawai, All rights reserved.
 
      Permission is hereby granted, free of charge, to any person
